# shadow

./: .gitignore  .pylintrc  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
shadow/: __init__.py  __main__.py  client.py  plugin.py  utils.py
shadow/ext/builtins/: __init__.py  eval.py  uri.py
shadow/ext/builtins/uri/: __init__.py  quote.py  refrence.py  trace.py
shadow/ext/builtins/uri/core/: __init__.py  plugin.py  protocol.py  thread.py
