[tool.poetry]
name = "shadow"
version = "0.1.0"
description = "A selfbot designed to enrich the discord experience"
authors = ["mental <m3nta1@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.2"
click = "^7.0"
coloredlogs = "^10.0"
jishaku = "^1.15"

[tool.poetry.scripts]
shadow = 'shadow:__main__.main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
